vpc-lattice/active-svc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-stable
spec:
  parentRefs:
  - name: argocd
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-stable
      namespace: canary-demo
      port: 80
